fixed webkit layout issues

--- a/css/main.sass
+++ b/css/main.sass
@@ -32,17 +32,23 @@ body
   min-height: 100%
   font-family: 'open_sans'
   background: $background-color
+  -moz-box-sizing: border-box
   box-sizing: border-box
   font-size: 1rem
   color: $content-text
+  display: -webkit-flex
   display: flex
+  -webkit-flex-direction: column
   flex-direction: column
 .page-content
+  -webkit-flex-grow: 2
   flex-grow: 2
 .site-header
+  -moz-box-sizing: border-box
   box-sizing: border-box
   text-align: center
   padding: 20px
+  width: 100%
 .site-header, .site-footer
   padding: 20px
   color: $background-color
@@ -56,6 +62,8 @@ body
 .site-footer
   bottom: 0
   width: 100%
+  -moz-box-sizing: border-box
+  box-sizing: border-box
 .social-links
   text-align: center
   ul
@@ -117,4 +125,5 @@ body
     width: 300px
     left: 0
     bottom: 0
+    -moz-box-sizing: border-box
     box-sizing: border-box
